# bachelorprojekt

./: .gitignore  CMakeLists.txt  LICENSE  Node.cpp  Node.h  README.md  TestTree1.h  main.cpp
accessrights/: AccessRight.cpp  Command.cpp  Path.h  Taglist.cpp
src/: main.cpp
src/accessrights/: AccessRight.h  Command.h  Path.cpp  Taglist.h
src/suppe/: hash.h  sha_test.h  snark.h  snark.tpp  utils.h  webstrate_cs.h
